--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/pp.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
